All: Isolate function defines

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -194,11 +194,7 @@ endif()
 include(CheckFunctionExists)
 check_function_exists(strdup HAVE_STRDUP)
 check_function_exists(strndup HAVE_STRNDUP)
-if(NOT PSP2)
-	check_function_exists(localtime_r HAVE_LOCALTIME_R)
-else()
-	set(HAVE_LOCALTIME_R OFF)
-endif()
+check_function_exists(localtime_r HAVE_LOCALTIME_R)
 if(NOT CMAKE_SYSTEM_NAME STREQUAL "Generic")
 	check_function_exists(snprintf_l HAVE_SNPRINTF_L)
 	if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
@@ -217,30 +213,43 @@ else()
 	set(MINIMAL_CORE ON)
 endif()
 
+check_function_exists(chmod HAVE_CHMOD)
+check_function_exists(umask HAVE_UMASK)
+
+set(FUNCTION_DEFINES)
+
 if(HAVE_STRDUP)
-	add_definitions(-DHAVE_STRDUP)
+	list(APPEND FUNCTION_DEFINES HAVE_STRDUP)
 endif()
 
 if(HAVE_STRNDUP)
-	add_definitions(-DHAVE_STRNDUP)
+	list(APPEND FUNCTION_DEFINES HAVE_STRNDUP)
 endif()
 
 if(HAVE_LOCALTIME_R)
-	add_definitions(-DHAVE_LOCALTIME_R)
+	list(APPEND FUNCTION_DEFINES HAVE_LOCALTIME_R)
 endif()
 
 if(HAVE_NEWLOCALE AND HAVE_FREELOCALE AND HAVE_USELOCALE)
-	add_definitions(-DHAVE_LOCALE)
+	list(APPEND FUNCTION_DEFINES HAVE_LOCALE)
 	if (HAVE_STRTOF_L)
-		add_definitions(-DHAVE_STRTOF_L)
+		list(APPEND FUNCTION_DEFINES HAVE_STRTOF_L)
 	endif()
 	if (HAVE_SNPRINTF_L)
-		add_definitions(-DHAVE_SNPRINTF_L)
+		list(APPEND FUNCTION_DEFINES HAVE_SNPRINTF_L)
 	endif()
 endif()
 
 if(HAVE_SETLOCALE)
-	add_definitions(-DHAVE_SETLOCALE)
+	list(APPEND FUNCTION_DEFINES HAVE_SETLOCALE)
+endif()
+
+if(HAVE_CHMOD)
+	list(APPEND FUNCTION_DEFINES HAVE_CHMOD)
+endif()
+
+if(HAVE_UMASK)
+	list(APPEND FUNCTION_DEFINES HAVE_UMASK)
 endif()
 
 # Feature dependencies
@@ -481,7 +490,7 @@ if(BUILD_SHARED)
 	add_library(${BINARY_NAME} SHARED ${SRC})
 	if(BUILD_STATIC)
 		add_library(${BINARY_NAME}-static STATIC ${SRC})
-		set_target_properties(${BINARY_NAME}-static PROPERTIES COMPILE_DEFINITIONS "${OS_DEFINES};${FEATURE_DEFINES}")
+		set_target_properties(${BINARY_NAME}-static PROPERTIES COMPILE_DEFINITIONS "${OS_DEFINES};${FEATURE_DEFINES};${FUNCTION_DEFINES}")
 		install(TARGETS ${BINARY_NAME}-static DESTINATION ${LIBDIR} COMPONENT lib${BINARY_NAME})
 		add_dependencies(${BINARY_NAME}-static version-info)
 	endif()
@@ -490,7 +499,7 @@ else()
 endif()
 
 add_dependencies(${BINARY_NAME} version-info)
-set_target_properties(${BINARY_NAME} PROPERTIES VERSION ${LIB_VERSION_STRING} SOVERSION ${LIB_VERSION_ABI} COMPILE_DEFINITIONS "${OS_DEFINES};${FEATURE_DEFINES}")
+set_target_properties(${BINARY_NAME} PROPERTIES VERSION ${LIB_VERSION_STRING} SOVERSION ${LIB_VERSION_ABI} COMPILE_DEFINITIONS "${OS_DEFINES};${FEATURE_DEFINES};${FUNCTION_DEFINES}")
 
 target_link_libraries(${BINARY_NAME} ${DEBUGGER_LIB} ${DEPENDENCY_LIB} ${OS_LIB})
 install(TARGETS ${BINARY_NAME} LIBRARY DESTINATION ${LIBDIR} COMPONENT lib${BINARY_NAME} NAMELINK_SKIP ARCHIVE DESTINATION ${LIBDIR} RUNTIME DESTINATION ${LIBDIR} COMPONENT lib${BINARY_NAME})
