PSP2: Let PSP2 find its packages if in portlibs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -277,11 +277,11 @@ if(BUILD_GLES2 AND NOT BUILD_RASPI)
 endif()
 set(WANT_ZLIB ${USE_ZLIB})
 set(WANT_PNG ${USE_PNG})
+set(WANT_LIBZIP ${USE_LIBZIP})
+
 find_feature(USE_FFMPEG "libavcodec;libavformat;libavresample;libavutil;libswscale")
-if(NOT PSP2)
-	find_feature(USE_ZLIB "ZLIB")
-	find_feature(USE_PNG "PNG")
-endif()
+find_feature(USE_ZLIB "ZLIB")
+find_feature(USE_PNG "PNG")
 find_feature(USE_LIBZIP "libzip")
 find_feature(USE_MAGICK "MagickWand")
 
