Add iOS 9 rules

--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -99,20 +99,22 @@ endif
 	DEFINES += -DHAVE_LOCALE
 	DEFINES += -std=c99
 # iOS
-else ifeq ($(platform), ios)
+else ifneq (,$(findstring ios,$(platform)))
+
 	TARGET := $(TARGET_NAME)_libretro_ios.dylib
 	fpic := -fPIC
 	SHARED := -dynamiclib
 	ifeq ($(IOSSDK),)
 		IOSSDK := $(shell xcodebuild -version -sdk iphoneos Path)
 	endif
-	CC = clang -arch armv7 -isysroot $(IOSSDK)
-	OSXVER = `sw_vers -productVersion | cut -d. -f 2`
-	OSX_LT_MAVERICKS = `(( $(OSXVER) <= 9)) && echo "YES"`
-	ifeq ($(OSX_LT_MAVERICKS),"YES")
-		CC += -miphoneos-version-min=5.0
-		PLATFORM_DEFINES := -miphoneos-version-min=5.0
-	endif
+	CC = cc -arch armv7 -isysroot $(IOSSDK)
+ifeq ($(platform),ios9)
+	CC += -miphoneos-version-min=8.0
+	PLATFORM_DEFINES := -miphoneos-version-min=8.0
+else
+	CC += -miphoneos-version-min=5.0
+	PLATFORM_DEFINES := -miphoneos-version-min=5.0
+endif
 	DEFINES += -DHAVE_LOCALE
 	DEFINES += -std=c99
 # Theos
