--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -286,7 +286,7 @@ endif
 
 include $(BUILD_DIR)/Makefile.common
 
-OBJS := $(SOURCES_C:.c=.o) $(SOURCES_ASM:.S=.o)
+OBJS := $(SOURCES_C:.c=.o)
 
 DEFINES += $(PLATFORM_DEFINES) $(RETRODEFS)
 
@@ -296,9 +296,6 @@ LIBS :=
 
 %.o: %.c
 	$(CC) -c -o $@ $< $(CFLAGS) $(INCLUDES)
-%.o: %.S
-	$(CC) -c -o $@ $< $(CFLAGS) $(INCLUDES)
-
 
 ifeq ($(platform), theos_ios)
 COMMON_FLAGS := -DIOS $(COMMON_DEFINES) $(INCLUDES) -I$(THEOS_INCLUDE_PATH) -Wno-error
