--- a/libretro-build/Makefile.common
+++ b/libretro-build/Makefile.common
@@ -63,6 +63,10 @@ SOURCES_C :=   $(CORE_DIR)/src/arm/arm.c \
 					$(CORE_DIR)/src/third-party/blip_buf/blip_buf.c \
 					$(CORE_DIR)/src/util/crc32.c
 
+ifeq ($(HAVE_NEON),1)
+SOURCES_ASM += $(CORE_DIR)/src/util/arm-algo.S
+endif
+
 ifeq ($(HAVE_VFS_FD),1)
 ifeq ($(platform), vita)
 SOURCES_C += $(CORE_DIR)/src/platform/psp2/sce-vfs.c
