--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ set(BUILD_STATIC OFF CACHE BOOL "Build a static library")
 set(BUILD_SHARED ON CACHE BOOL "Build a shared library")
 set(BUILD_GL ON CACHE STRING "Build with OpenGL")
 set(BUILD_GLES2 OFF CACHE STRING "Build with OpenGL|ES 2")
+set(USE_EPOXY ON CACHE STRING "Build with libepoxy")
 set(DISABLE_DEPS OFF CACHE BOOL "Build without dependencies")
 file(GLOB ARM_SRC ${CMAKE_SOURCE_DIR}/src/arm/*.c)
 file(GLOB GBA_SRC ${CMAKE_SOURCE_DIR}/src/gba/*.c)
@@ -284,6 +285,7 @@ find_feature(USE_ZLIB "ZLIB")
 find_feature(USE_PNG "PNG")
 find_feature(USE_LIBZIP "libzip")
 find_feature(USE_MAGICK "MagickWand")
+find_feature(USE_EPOXY "epoxy")
 
 # Features
 set(DEBUGGER_SRC ${CMAKE_SOURCE_DIR}/src/debugger/debugger.c ${CMAKE_SOURCE_DIR}/src/debugger/memory-debugger.c)
@@ -435,6 +437,15 @@ if (USE_LZMA)
 	list(APPEND FEATURE_SRC ${LZMA_SRC})
 	list(APPEND FEATURES LZMA)
 endif()
+
+if(USE_EPOXY)
+	add_definitions(-DBUILD_GL -DBUILD_GLES2)
+	list(APPEND FEATURES EPOXY)
+	include_directories(AFTER ${EPOXY_INCLUDE_DIRS})
+	set(OPENGLES2_LIBRARY ${EPOXY_LIBRARIES})
+	set(CPACK_DEBIAN_PACKAGE_DEPENDS "${CPACK_DEBIAN_PACKAGE_DEPENDS},libepoxy0")
+endif()
+
 
 set(FEATURE_DEFINES)
 foreach(FEATURE IN LISTS FEATURES)
