--- a/res/shaders/ags001.shader/manifest.ini
+++ b/res/shaders/ags001.shader/manifest.ini
@@ -2,10 +2,15 @@
 name=AGS-001
 author=endrift
 description=A pristine recreation of the illumated Game Boy Advance SP
-passes=1
+passes=2
 
 [pass.0]
 fragmentShader=ags001.fs
 blend=1
+width=960
+height=640
+
+[pass.1]
+fragmentShader=ags001-light.fs
 width=960
 height=640
