--- a/res/shaders/ags001.shader/manifest.ini
+++ b/res/shaders/ags001.shader/manifest.ini
@@ -14,3 +14,16 @@ height=640
 fragmentShader=ags001-light.fs
 width=960
 height=640
+
+[uniform.lightBrightness]
+type=float
+default=1
+
+[uniform.reflectionBrightness]
+type=float
+default=0.07
+
+[uniform.reflectionDistance]
+type=float2
+default[0]=0
+default[1]=0.025
