OpenGL: Generalize shader loading a bit

--- a/res/shaders/ags001.shader/manifest.ini
+++ b/res/shaders/ags001.shader/manifest.ini
@@ -1,7 +1,7 @@
 [shader]
 name=AGS-001
 author=endrift
-description=A pristine recreation of the illumated Game Boy Advance SP
+description=A pristine recreation of the illuminated Game Boy Advance SP
 passes=2
 
 [pass.0]
@@ -18,12 +18,15 @@ height=640
 [uniform.lightBrightness]
 type=float
 default=1
+pass[0]=false
 
 [uniform.reflectionBrightness]
 type=float
 default=0.07
+pass[0]=false
 
 [uniform.reflectionDistance]
 type=float2
 default[0]=0
 default[1]=0.025
+pass[0]=false
