OpenGL: Readable name fixes

--- a/res/shaders/ags001.shader/manifest.ini
+++ b/res/shaders/ags001.shader/manifest.ini
@@ -19,14 +19,17 @@ height=640
 type=float
 default=1
 pass[0]=false
+readableName=Light brightness
 
 [uniform.reflectionBrightness]
 type=float
 default=0.07
 pass[0]=false
+readableName=Reflection brightness
 
 [uniform.reflectionDistance]
 type=float2
 default[0]=0
 default[1]=0.025
 pass[0]=false
+readableName=Reflection distance
