--- a/res/shaders/ags001.shader/manifest.ini
+++ b/res/shaders/ags001.shader/manifest.ini
@@ -15,21 +15,18 @@ fragmentShader=ags001-light.fs
 width=960
 height=640
 
-[uniform.lightBrightness]
+[pass.1.uniform.lightBrightness]
 type=float
 default=1
-pass[0]=false
 readableName=Light brightness
 
-[uniform.reflectionBrightness]
+[pass.1.uniform.reflectionBrightness]
 type=float
 default=0.07
-pass[0]=false
 readableName=Reflection brightness
 
-[uniform.reflectionDistance]
+[pass.1.uniform.reflectionDistance]
 type=float2
 default[0]=0
 default[1]=0.025
-pass[0]=false
 readableName=Reflection distance
