--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ set(USE_GDB_STUB ON CACHE BOOL "Whether or not to enable the GDB stub ARM debugg
 set(USE_FFMPEG ON CACHE BOOL "Whether or not to enable FFmpeg support")
 set(USE_ZLIB ON CACHE BOOL "Whether or not to enable zlib support")
 set(USE_PNG ON CACHE BOOL "Whether or not to enable PNG support")
-set(USE_LIBZIP ON CACHE BOOL "Whether or not to enable ZIP support")
+set(USE_LIBZIP ON CACHE BOOL "Whether or not to enable LIBZIP support")
 set(USE_MAGICK ON CACHE BOOL "Whether or not to enable ImageMagick support")
 set(USE_BLIP ON CACHE BOOL "Whether or not to enable blip_buf support")
 set(USE_LZMA ON CACHE BOOL "Whether or not to enable 7-Zip support")
@@ -408,6 +408,10 @@ if(USE_LIBZIP)
 	list(APPEND FEATURES LIBZIP)
 	list(APPEND VFS_SRC ${CMAKE_SOURCE_DIR}/src/util/vfs/vfs-zip.c)
 	set(CPACK_DEBIAN_PACKAGE_DEPENDS "${CPACK_DEBIAN_PACKAGE_DEPENDS},libzip2")
+elseif(USE_ZLIB)
+	list(APPEND VFS_SRC ${CMAKE_SOURCE_DIR}/src/util/vfs/vfs-zip.c
+		${CMAKE_SOURCE_DIR}/src/third-party/zlib/contrib/minizip/ioapi.c
+		${CMAKE_SOURCE_DIR}/src/third-party/zlib/contrib/minizip/unzip.c)
 endif()
 
 if (USE_LZMA)
@@ -602,7 +606,6 @@ message(STATUS "	GDB stub: ${USE_GDB_STUB}")
 message(STATUS "	Video recording: ${USE_FFMPEG}")
 message(STATUS "	GIF recording: ${USE_MAGICK}")
 message(STATUS "	Screenshot/advanced savestate support: ${USE_PNG}")
-message(STATUS "	ZIP support: ${USE_LIBZIP}")
 message(STATUS "	7-Zip support: ${USE_LZMA}")
 message(STATUS "	Better audio resampling: ${USE_BLIP}")
 message(STATUS "Frontend summary:")
