All: Refresh port building a bit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -189,6 +189,11 @@ if(PSP2 OR WII)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-format")
 endif()
 
+if(DEFINED 3DS OR DEFINED PSP2 OR DEFINED WII)
+	set(USE_LZMA OFF)
+	set(USE_GDB_STUB OFF)
+endif()
+
 if(WII)
 	add_definitions(-U__STRICT_ANSI__)
 endif()
@@ -210,7 +215,9 @@ if(NOT CMAKE_SYSTEM_NAME STREQUAL "Generic")
 	check_function_exists(uselocale HAVE_USELOCALE)
 	check_function_exists(setlocale HAVE_SETLOCALE)
 else()
-	set(DISABLE_DEPS ON CACHE BOOL "This platform cannot build with dependencies" FORCE)
+	if(NOT DEFINED 3DS AND NOT DEFINED PSP2 AND NOT DEFINED WII)
+		set(DISABLE_DEPS ON CACHE BOOL "This platform cannot build with dependencies" FORCE)
+	endif()
 	set(DISABLE_FRONTENDS ON)
 	set(MINIMAL_CORE ON)
 endif()
