--- a/src/platform/openemu/Info.plist.in
+++ b/src/platform/openemu/Info.plist.in
@@ -17,7 +17,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.8.0.1232</string>
+	<string>${VERSION_STRING}</string>
 	<key>NSPrincipalClass</key>
 	<string>OEGameCoreController</string>
 	<key>OEGameCoreClass</key>
