OpenEmu: Fix Info.plist, saves

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -588,8 +588,8 @@ if(BUILD_OPENEMU)
 		MACOSX_BUNDLE_INFO_PLIST ${CMAKE_SOURCE_DIR}/src/platform/openemu/Info.plist.in
 		BUNDLE TRUE
 		BUNDLE_EXTENSION oecoreplugin
-		OUTPUT_NAME ${PROJECT_NAME}EmuCore
-		COMPILE_DEFINITIONS "DISABLE_THREADING;${OS_DEFINES};${FUNCTION_DEFINES};MINIMAL_CORE=2")
+		OUTPUT_NAME ${PROJECT_NAME}
+		COMPILE_DEFINITIONS "DISABLE_THREADING;${OS_DEFINES};${FUNCTION_DEFINES};MINIMAL_CORE=1")
 	target_link_libraries(${BINARY_NAME}-openemu ${OS_LIB} ${FOUNDATION} ${OPENEMUBASE})
 	install(TARGETS ${BINARY_NAME}-openemu LIBRARY DESTINATION ${LIBDIR} COMPONENT ${BINARY_NAME}.oecoreplugin NAMELINK_SKIP)
 endif()
