--- a/libretro-build/Makefile.android_mips64
+++ b/libretro-build/Makefile.android_mips64
@@ -44,7 +44,7 @@ PLATLDXFLAGS   = -shared --sysroot=$(NDK_ROOT_DIR)/platforms/android-21/arch-mip
 ################
 # libretro setup
 
-RETRODEFS     = -D__LIBRETRO__
+RETRODEFS     = -D__LIBRETRO__ -DMINIMAL_CORE=2
 RETROCFLAGS   =
 RETROCXXFLAGS =
 RETROLDFLAGS  =
